Updated Kickstarter Analysis Project Data Science Blog.ipynb to reflect CRISP-DM processapplied.

--- a/Kickstarter Analysis Project Data Science Blog.ipynb
+++ b/Kickstarter Analysis Project Data Science Blog.ipynb
@@ -17,6 +17,8 @@
     "- __Question 2:__ Is there any seasonality on project launches?\n",
     "- __Question 3:__ How the platform and product areas evolved through the years?\n",
     "\n",
+    "Along these questions, I follow the the CRISP-DM approach to analyze the data. (*Note: Due to the fact that the answers I'm looking for are not of a predictive nature (I want to see the past, not the future), I don't use any Machine Learning nor Deep Learning tools.*)\n",
+    "\n",
     "Let's begin!"
    ]
   },
@@ -24,7 +26,24 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### CRISP-DM: Business Understanding:\n",
+    "\n",
+    "Crowdfunding represents one of the faces of the new \"Collaborative Economies\". Through the following analysis over a dataset that synthesize the development of one the major players in this field, I'm interested in find a general picture of the performance of this new way people interact with creators and, as far as possible, find insights of the behavior of these new form of entrepreneurship. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Description of the dataset and preparation of the data:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### CRISP-DM: Data Understanding:\n",
+    "The questions I pretend to answer arose from a preliminary review of the dataset collected by Mickaël Mouillé. First, I need to get a glance on the data and verify/wrangle if the data is suitable for gave us answers. I will do it in the next section. "
    ]
   },
   {
@@ -237,6 +256,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### CRISP-DM: Data Preparation:\n",
+    "In order to achieve valuable info about Kickstarter, let's make sure that the data is suitable for analysis and that their contents are plausible:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
@@ -252,7 +279,7 @@
     }
    ],
    "source": [
-    "#There are unique, numeric identifiers for each project:\n",
+    "#There are unique, numeric identifiers for each project?:\n",
     "print('ID column data type:', df.ID.dtype)\n",
     "print('ID column amount of unique values:', len(df.ID.unique()))\n",
     "print('Number of projects:', df.shape[0])"
@@ -2023,6 +2050,15 @@
    "metadata": {},
    "source": [
     "We can see that the platform reach a good general performace in around three-four years, alongside a steady increase of printed, tech and food products. From 2015 onwards is evident a decrease in the number of projects launched. What could happened? a natural cycle of crowdfunding hype?, Undermined reputation due to bad projects?, A new tendency behind the curtain? Many insights is still under cover of the data!      "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### CRISP-DM: Communicate:\n",
+    "\n",
+    "The results obtained in this analysis can be viewed in https://medium.com/@german.pinzon/a-glance-on-kickstarter-projects-through-data-b7bbb508b492. I think they are interesting for any person involved (or simply curious) in the arise of collaborative economies. Also, if you want to get a deeper look on the technics I use in this analysis, this notebook and the dataset can be found on this Github repo: https://github.com/germanpinzon807/Kickstarter_analysis Thanks!  "
    ]
   }
  ],
